# omni-agent

./: .gitignore  README.md  docker-compose.yml  justfile  package.json  pnpm-lock.yaml
.github/workflows/: pull_request.yml
apps/ai-worker/: .coverage  .env.example  README.md  justfile  main.py  pyproject.toml  run_worker.sh
apps/ai-worker/src/: celery_app.py
apps/ai-worker/src/core/: config.py  logging_config.py  s3_client.py
apps/ai-worker/src/model/: factory.py
apps/ai-worker/src/parsing/: complexity_analyzer.py  file_parsing_service.py  hybrid_content_splitter.py
apps/ai-worker/src/pipelines/: file_pipeline.py  indexing_pipeline.py  parse_pipeline.py  vectorize_pipeline.py
apps/ai-worker/src/services/: documents_service.py  file_parsing_service.py
apps/ai-worker/src/tasks/: __init__.py  ingestion.py  parse_file.py  vectorize_file.py
apps/ai-worker/tests/: conftest.py  test_complexity_analyzer.py  test_documents_service.py  test_file_parsing_service.py  test_hybrid_content_splitter.py  test_indexing_pipeline.py  test_parse_file_task.py  test_parse_pipeline.py  test_s3_client.py  test_vectorize_file_task.py  test_vectorize_pipeline.py
apps/ai-worker/tests/fixtures/: sample.csv  sample.txt
apps/gateway/: justfile  package.json  pnpm-lock.yaml
apps/gateway/src/: main.ts
apps/web/: README.md  drizzle.config.ts  import-rewrite-loader.cjs  justfile  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/drizzle/: 20260225131547_iam_users_teams.sql  20260226091750_initial_iam_and_conversation.sql  20260227092645_initial_iam_and_conversation.sql
apps/web/drizzle/meta/: 20260225131547_snapshot.json  20260226091750_snapshot.json  20260227092645_snapshot.json  _journal.json
apps/web/src/: proxy.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/app/actions/chat/: actions.ts
apps/web/src/app/chat/: layout.tsx  page.tsx
apps/web/src/app/chat/[id]/: page.tsx
apps/web/src/app/components/: Header.module.css  Header.tsx  LandingView.module.css  LandingView.tsx
apps/web/src/app/docs/: layout.tsx  page.tsx
apps/web/src/app/error/: page.tsx
apps/web/src/app/user/: page.tsx
apps/web/src/app/welcome/: page.tsx  welcome.module.css
apps/web/src/backend/: app.module.ts  index.ts  main.ts  shared.ts
apps/web/src/backend/common/: functions.ts
apps/web/src/backend/config/: config.facade.ts  config.module.ts  env.ts  envAccessor.ts  schema.ts
apps/web/src/backend/conversation/: conversation.facade.ts  conversation.module.ts
apps/web/src/backend/db/: const.ts  database-drizzle.module.ts  database-kysely.module.ts  database.service.ts  index.ts  schema.ts
apps/web/src/backend/db/utils/: hook-manager.ts  (+3 more)
apps/web/src/backend/iam/: iam.module.ts  index.ts
apps/web/src/components/auth/: SessionSync.tsx
apps/web/src/components/chat/: ChatHeader.tsx  ChatInput.tsx  MessageBubble.tsx  MessageList.tsx  RightSidebar.tsx
apps/web/src/components/error/: ErrorView.tsx
apps/web/src/components/landing/: LandingPage.tsx
apps/web/src/components/navigation/: SidebarNavigation.tsx
apps/web/src/components/user/: userMenu.tsx
apps/web/src/lib/: error.ts  validation.ts
(+21 files in other folders)
