[project]
name = "ai-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.51",
    "httpx>=0.28.1",
    "langgraph>=1.0.8",
    "llama-index>=0.14.0",
    "llama-index-core>=0.13.6",
    "llama-index-embeddings-gemini>=0.4.2",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-gemini>=0.6.2",
    "llama-index-readers-docling>=0.4.2",
    "llama-index-readers-file>=0.5.6",
    "llama-index-vector-stores-qdrant>=0.9.1",
    "llama-parse>=0.6.54",
    "marker-pdf>=1.10.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-pptx>=1.0.2",
    "qdrant-client>=1.16.2",
    "redis>=7.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B"]
fix = true
unfixable = []

[tool.ruff.lint]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
